2004-04-02  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/helper/bezier-utils.cpp (sp_darray_left_tangent,
	sp_darray_right_tangent):
	Switch to using just the two end points for calculating the gradient.
	(The old code could sometimes cause g_warning's.) 
	Correct the documentation of requirements.
	(sp_darray_center_tangent): Similarly remove the #if'ed out code for
	looking at more than two points.

2004-03-31  Ted Gould <ted@gould.cx>

	* src/interface.cpp:  Changing the default size so that it matches
	  the default template size.  This way, for blank documents, the
	  window doesn't open and then resize.

2004-03-31  Ted Gould <ted@gould.cx>
	* src/file.cpp, src/dialogs/filedialog.cpp, src/extension/db.cpp,
	  src/extension/db.h, src/extension/system.cpp:
	  A bunch of changes for Bulia's bug 925875.  Basically now the
	  save dialog remembers which extension you've used.  This also
	  means that save works with non-standard extensions.  Also, it
	  will add extensions for you if you didn't put them on.  Finally,
	  the error dialog doesn't come up if you hit cancel in the
	  'Save As...' dialog.  Whew!

	* src/preferences-skeleton.h:  Added in settings to make the save
	  extension global, along with whether or not the files should have
	  extensions tacked on the end of them.

2004-03-31  Ted Gould <ted@gould.cx>

	* src/interface.cpp, src/interface.h, src/file.cpp:
	  Adding a cute little dialog to tell you if you are about to
	  overwrite a file you want to keep.  This fixes bug #911237

2004-03-30  Jon Phillips <kidproto@users.sf.net>

	* share/icons/icons.svg src/interface.cpp src/verbs.cpp src/verbs.h:
	  Added rest of icons for the menu. I think they are a good start.
	  There still needs to be continuity between styles, but at least
	  all needed icons are present. I didn't create icons for elements
	  that are going to be removed eventually.

	* share/tutorials/tipsandtricks.svg src/help.cpp src/interface.cpp: